--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
 	    "key"       : "header.company_logo",
 	    "label"     : "URL to your company logo",
 	    "type"      : "text",
-	    "default"   : "/layout/plugins/production/ceres/images/ceres-logo.svg"
+	    "default"   : "/images/gallery/Template Vorlagen/logo.png"
 	}
 ]
