--- a/config.json
+++ b/config.json
@@ -54,5 +54,12 @@
 		"label"     : "Schmuckstücke",
 		"type"      : "text",
 		"default"   : "/"
+	},
+	{
+		"tab"       : "Homepage",
+		"key"       : "homepage.homepageSale",
+		"label"     : "Sale",
+		"type"      : "text",
+		"default"   : "/"
 	}
 ]
