Banner Einstellungen hinzugefügt

--- a/config.json
+++ b/config.json
@@ -29,6 +29,20 @@
 	},
 	{
 		"tab"       : "Homepage",
+		"key"       : "homepage.homepageBannerLink",
+		"label"     : "Banner Link",
+		"type"      : "text",
+		"default"   : "/"
+	},
+	{
+		"tab"       : "Homepage",
+		"key"       : "homepage.homepageBannerText",
+		"label"     : "Banner Text",
+		"type"      : "text",
+		"default"   : "/"
+	},
+	{
+		"tab"       : "Homepage",
 		"key"       : "homepage.homepagePerlenparadies",
 		"label"     : "Perlenparadies",
 		"type"      : "text",
