--- a/config.json
+++ b/config.json
@@ -1,5 +1,11 @@
 [
 	{
+		"tab"       : "Global",
+		"key"       : "global.shippingCostsCategoryId",
+		"label"     : "Category to display shipping information",
+		"type"      : "category_select"
+	},
+	{
 	    "tab"       : "Header",
 	    "key"       : "header.company_logo",
 	    "label"     : "URL to your company logo",
